<resources>
    <string name="app_name">Prueba_Tecnica</string>
    <string name="us_name">Usuario</string>
    <string name="us_name_name">Nombre Usuario</string>
    <string name="pass_name">Contraseña</string>
    <string name="pass_verifi_name">Confirmar contraseña</string>
    <string name="ingre">Ingresar</string>
    <string name="no_account">No tienes cuenta</string>
    <string name="regis">Registrate</string>
    <string name="ver">Ver</string>
    <string name="ingre_data">Ingresar datos</string>
    <string name="examp_hint">Juan Manolo</string>
    <string name="examp_hint_2">juan123</string>
    <string name="registro">Registrar</string>
    <string name="cancel">Cancelar</string>
    <string name="id">ID:</string>
    <string name="name">Name:</string>
    <string name="type">Type:</string>
    <string name="ppu">ppu:</string>
    <string name="donut">Donut</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="topping">Topping</string>
    <string name="batter">Batter</string>
    <string name="listado_coockies">Listado Donut\'s</string>
    <string name="detalle_coockies">Detalle Donut\'s</string>
    <string name="byt">BYTE</string>
</resources>