<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="15dp"
    tools:context=".registrActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/ingre_data"
                android:textColor="@color/primary"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/us_name_name"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/txtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_txt"
                android:hint="@string/examp_hint"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textColorHint="@color/gray"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/us_name"
                android:textColor="@color/gray"
                android:layout_marginTop="10dp"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/txtUser2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_txt"
                android:hint="@string/examp_hint_2"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textColorHint="@color/gray"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/pass_name"
                android:textColor="@color/gray"
                android:textSize="16sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPass2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_txt"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:inputType="textPassword"
                    tools:ignore="SmallSp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/pass_verifi_name"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:layout_marginBottom="10dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPassVerif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_txt"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:inputType="textPassword"
                    tools:ignore="SmallSp" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/btn_border"
        android:text="@string/registro"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/btnCancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_border"
        android:text="@string/cancel"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnRegist"
        app:layout_constraintTop_toBottomOf="@+id/card3" />

</androidx.constraintlayout.widget.ConstraintLayout>