<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    tools:context=".fragmets.MaestroFragment">

    <ImageView
        android:id="@+id/imgDonut"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/donut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/tid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:text="@string/id"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/txtIdF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgDonut"
         />

    <TextView
        android:id="@+id/txtIdF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/tNameF"
        app:layout_constraintStart_toEndOf="@id/tid"
        app:layout_constraintTop_toBottomOf="@+id/imgDonut"
        tools:text="000102" />

    <TextView
        android:id="@+id/tNameF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:text="@string/name"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/txtNameF"
        app:layout_constraintStart_toEndOf="@id/txtIdF"
        app:layout_constraintTop_toBottomOf="@+id/imgDonut"
         />

    <TextView
        android:id="@+id/txtNameF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/tTypeF"
        app:layout_constraintStart_toEndOf="@id/tNameF"
        app:layout_constraintTop_toBottomOf="@+id/imgDonut"
        tools:text="Donnut ja" />

    <TextView
        android:id="@+id/tTypeF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:text="@string/type"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/txtTypeF"
        app:layout_constraintStart_toEndOf="@id/txtNameF"
        app:layout_constraintTop_toBottomOf="@+id/imgDonut"
         />

    <TextView
        android:id="@+id/txtTypeF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/tPpuF"
        app:layout_constraintStart_toEndOf="@id/tTypeF"
        app:layout_constraintTop_toBottomOf="@+id/imgDonut"
        tools:text="type:" />

    <TextView
        android:id="@+id/tPpuF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:text="@string/ppu"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/txtPpuF"
        app:layout_constraintStart_toEndOf="@id/txtTypeF"
        app:layout_constraintTop_toBottomOf="@+id/imgDonut"
         />

    <TextView
        android:id="@+id/txtPpuF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tPpuF"
        app:layout_constraintTop_toBottomOf="@+id/imgDonut"
        tools:text="0.55" />


</androidx.constraintlayout.widget.ConstraintLayout>