<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"

    app:cardBackgroundColor="@color/primary"
    app:cardCornerRadius="15dp"
    xmlns:tools="http://schemas.android.com/tools"

    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imgDonut"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/donut"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <TextView
            android:id="@+id/tid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="@string/id"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/imgDonut"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/txtIdF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/tid"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="000102" />

        <TextView
            android:id="@+id/tNameF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="@string/name"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/txtIdF"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="10dp"
            />

        <TextView
            android:id="@+id/txtNameF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/tNameF"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Donnut ja" />

        <TextView
            android:id="@+id/tTypeF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="@string/type"
            android:textColor="@color/black"
            android:layout_marginVertical="20dp"
            app:layout_constraintStart_toEndOf="@id/imgDonut"
            app:layout_constraintTop_toBottomOf="@id/tid"
            />

        <TextView
            android:id="@+id/txtTypeF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:layout_marginVertical="20dp"
            app:layout_constraintStart_toEndOf="@id/tTypeF"
            app:layout_constraintTop_toBottomOf="@id/tid"
            tools:text="type:" />

        <TextView
            android:id="@+id/tPpuF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="@string/ppu"
            android:textColor="@color/black"
            android:layout_marginVertical="20dp"
            app:layout_constraintStart_toEndOf="@id/txtTypeF"
            app:layout_constraintTop_toBottomOf="@id/tid"
            />

        <TextView
            android:id="@+id/txtPpuF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:layout_marginVertical="20dp"
            app:layout_constraintStart_toEndOf="@id/tPpuF"
            app:layout_constraintTop_toBottomOf="@id/tid"
            tools:text="0.55" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>